# laws-africa.github.io

./: .gitignore  404.html  AGENTS.md  CNAME  Gemfile  LICENSE  README.md  _config.yml  about.html  about.markdown  annual-report.html  apply.md  blog-list.markdown  blog-post.markdown  blog.markdown  case-studies.markdown  commons.markdown  contact.markdown  deploy-key.enc  faq.markdown  feed.xml  index.html  jobs.markdown  mission.html  open-access.html  open-african-law.html  open-law-technology.html  package-lock.json  package.json  pelicanconf.py  publications.markdown  publishconf.py  pyproject.toml  resources.html  scanstations.markdown  send-us-legislation.markdown  spoton-case-study.html  story.markdown  style.css  test.html  (+1 more)
_case-studies/: aga.markdown  c4ads.markdown  kenyalaw.markdown  spoton.markdown
_data/: commons.json
_drafts/: adding-the-law-to-your-news-article-should-be-as-easy-as-adding-a-video-or-tweet.markdown  african-liis-and-laws-dot-africa-are-building-the-largest-free-and-open-access-repository-of-african-gazettes.markdown  country-codes-in-frbr-uris.markdown  how-we-built-an-automated-glossary-for-namibian-legislation.markdown  laws-dot-africa-joins-the-free-access-to-law-movement.markdown  machine-friendly-legislation-whos-doing-what.markdown  making-south-african-by-laws-easy-to-find-read-and-share-automating-openbylaws-dot-org-dot-za-with-laws-dot-africa.markdown  meet-our-advisory-board-justice-isaac-lenaola.markdown  meet-our-advisory-board-robert-buergenthal.markdown  meet-our-advisory-board-vidhu-vedalankar.markdown  (+1 more)
api/: detail.md  (+2 more)
(+233 files in other folders)
